--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "source": "https://github.com/Emeset-mvc/emeset-app"
     },
     "require": {
-        "emeset/framework": "^0.4"
+        "emeset/framework": "^0.4",
+        "chillerlan/php-qrcode": "^5.0"
     },
 
     "autoload": {
