--- a/package.json
+++ b/package.json
@@ -28,13 +28,21 @@
     "prod": "npm-run-all -p buildcss prodjs",
     "serve": "cd public && php -S localhost:8080 && echo 'Server started on http://localhost:8080'",
     "start": "npm-run-all -p watch serve",
-    "test": "node --experimental-vm-modules node_modules/.bin/jest --env=jsdom"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest --env=jsdom"
   },
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node"
   },
   "dependencies": {
-    "flowbite": "^2.5.2"
-  }
+    "flowbite": "^2.5.2",
+    "tot__maquina": "file:"
+  },
+  "name": "tot__maquina",
+  "version": "1.0.0",
+  "description": "Versió amb frontcontroller del \"Framework\" Emeset.",
+  "main": "tailwind.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
