--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "testEnvironment": "node"
   },
   "dependencies": {
-    "flowbite": "^2.5.2"
+    "flowbite": "^2.5.2",
+    "sortablejs": "^1.15.6"
   }
 }
