--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jquery": "^3.7",
+    "jquery": "^3.7.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.31",
     "postcss-cli": "^10.1.0",
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "flowbite": "^2.5.2",
+    "leaflet": "^1.9.4",
     "sortablejs": "^1.15.6",
     "tot__maquina": "file:"
   },
