--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "type": "module",
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
     "autoprefixer": "^10.4.16",
+    "babel-loader": "^9.2.1",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -11,9 +14,9 @@
     "postcss-cli": "^10.1.0",
     "tailwindcss": "^3.4.15",
     "ts-jest": "^29.1.1",
-    "ts-loader": "^9.5.0",
-    "typescript": "^5.2.2",
-    "webpack": "^5.89.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.7.2",
+    "webpack": "^5.97.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
