--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "testEnvironment": "node"
   },
   "dependencies": {
+    "fancybox": "^3.0.1",
     "flowbite": "^2.5.2",
     "leaflet": "^1.9.4",
     "sortablejs": "^1.15.6",
