Fix machines, implementació al servidor

--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
   "dependencies": {
     "fancybox": "^3.0.1",
     "flowbite": "^2.5.2",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "leaflet": "^1.9.4",
     "sortablejs": "^1.15.6",
     "tot__maquina": "file:"
